fix: about me spacing

--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,13 @@
 
 :root {
   --main-white: gainsboro;
-  --gray-gradient: linear-gradient(90deg,
-      #050505 0%,
-      #101010 100%);
-  --skyblue-gradient: linear-gradient(300deg,
-      #033571 0%,
-      #091221 100%);
+  --gray-gradient: linear-gradient(90deg, #050505 0%, #101010 100%);
+  --skyblue-gradient: linear-gradient(300deg, #033571 0%, #091221 100%);
 }
 
 * {
   box-sizing: border-box;
-  font-family: "League Spartan";
+  font-family: 'League Spartan';
   color: var(--main-white);
   margin: 0;
 }
@@ -47,12 +43,7 @@ h1 {
 }
 
 nav {
-  background: linear-gradient(
-      #091221,
-      #52abff 10%,
-      #52abff 90%,
-      #091221 100%
-  );
+  background: linear-gradient(#091221, #52abff 10%, #52abff 90%, #091221 100%);
   width: 100vw;
   display: flex;
   position: fixed;
@@ -88,7 +79,7 @@ nav p {
   background: var(--gray-gradient);
 }
 
-#welcome-section>p {
+#welcome-section > p {
   margin: 0;
   font-size: 2rem;
   font-weight: 100;
@@ -96,7 +87,6 @@ nav p {
 }
 
 #presentation-section {
-  padding: 0 0 50px 0;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -106,7 +96,8 @@ nav p {
   background: var(--gray-gradient);
 }
 
-#presentation-section h1, #projects h1 {
+#presentation-section h1,
+#projects h1 {
   font-size: 3rem;
   padding: 0 40px 20px 40px;
   margin: 30px 0;
@@ -114,9 +105,12 @@ nav p {
   border-bottom: 2px solid var(--main-white);
 }
 
+#presentation-section p {
+  margin-top: 25px;
+}
+
 #presentation-section h3 {
   text-decoration: underline;
-
 }
 
 #lists-square {
@@ -124,7 +118,7 @@ nav p {
 }
 
 .text-square {
-  margin: 75px;
+  margin: 50px 50px 75px 50px;
 }
 
 .text-square li {
@@ -206,7 +200,7 @@ a.project-tile {
   padding: 0;
 }
 
-a.project-tile>span {
+a.project-tile > span {
   text-align: center;
 }
 
